--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script>
       // 建構子 ScoreOutputer 接受一個字串，該字串為 csv 的檔案名稱
       // 以下面範例，檔名就為 "109598105(總分: 6).csv"
-      var so = new ScoreOutputer("109598105");
+      var so = new ScoreOutputer("107590049");
       so.installCSS(function () {
         // 安裝 bootstrap 的 css，如果在 html 上方引用 bootstrap 5.1.1 的話就不用使用 installCSS ，注意一定要 bootstrap css 5.1.1 版
         // installCSS 接收一個 callback 當作參數，作為成功安裝 bootstrap css 的回呼函式
@@ -42,7 +42,7 @@
         //addChild 要比 renderModal 先呼叫
         so.addChild("產生XYZ Slice gui", 2, true);
         so.addChild("呈現nrrd格式模型切片", 2, true);
-        so.addChild("可以選擇產生的模型", 2, false);
+        so.addChild("可以選擇產生的模型", 2, true);
         so.addChild("呈現raw、dat格式模型切片", 2, false);
         so.addChild("可將指定pvm檔轉raw並可成功開啟", 2, false);
 
